// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`BlockStylesDataloaderService load should load many 1`] = `
[
  {
    "where": {
      "id": {
        "in": [
          "123",
          "321",
        ],
      },
    },
  },
]
`;

exports[`BlockStylesDataloaderService load should load one 1`] = `
[
  {
    "where": {
      "id": {
        "in": [
          "123",
        ],
      },
    },
  },
]
`;

exports[`BlockStylesDataloaderService should prime 1`] = `
[
  "123",
  {},
]
`;
